# uhd-e300-dev

UHD/: CMakeLists.txt
binaries/: b200_ctrlresp.bit  b200_main_slfifo.hex  b200_trial14.bit  fx3_256_newflags.hex  fx3_256_newflags_16burst.hex  octoclock_bootloader.hex  usrp_b200_fw.hex  usrp_b200_fw.usrp3.hex  usrp_e300_fpga.bit  usrp_e300_pmc.hex  usrp_e310_fpga.bit
firmware/attiny88/e200/: Makefile  PMC.atsln  PMC.cproj  bq24190.c  bq24190.h  config.h  debug.c  debug.h  error.h  global.h  i2c.c  i2c.h  io.c  io.h  ltc3675.c  ltc3675.h  ltc4155.c  ltc4155.h  main.c  power.c  power.h
firmware/b250/: CMakeLists.txt  b250_debug.py  b250_fpga_downloader.py  b250_serial_loader.py  b250_serial_output.py
firmware/b250/b250/: CMakeLists.txt  b250_defs.h  b250_init.c  b250_init.h  b250_main.c  chinch.h
firmware/b250/include/: chinch.h  ethernet.h  printf.h  u3_net_stack.h  wb_i2c.h  wb_pkt_iface64.h  wb_uart.h  wb_utils.h  xge_mac.h  xge_phy.h
firmware/b250/lib/: CMakeLists.txt  chinch.c  ethernet.c  mdelay.c  printf.c  u3_net_stack.c  udp_uart.c  wb_i2c.c  wb_pkt_iface64.c  wb_uart.c
firmware/e300/rev_c/: Makefile
firmware/usrp3/: CMakeLists.txt
firmware/usrp3/x300/: CMakeLists.txt
firmware/x300/: CMakeLists.txt
firmware/x300/include/: chinch.h  ethernet.h  link_state_route_proto.h  u3_net_stack.h
firmware/x300/lib/: CMakeLists.txt  chinch.c  ethernet.c  link_state_route_proto.c  u3_net_stack.c  udp_uart.c
firmware/x300/x300/: CMakeLists.txt  x300_defs.h  x300_init.c  x300_main.c
fpga/usrp3/lib/zynq_fifo/: zynq_fifo_top.v
fpga/usrp3/top/b200/: radio_b200.v
fpga/usrp3/top/e300/: Makefile  e300.ucf  e300.v  e300_core.v  radio.v
host/: .gitignore  CMakeLists.txt  README.txt
host/cmake/Toolchains/: e200_cross.cmake
host/docs/: CMakeLists.txt  calibration.rst  dboards.rst  general.rst  gpio_api.rst  gpsdo.rst  gpsdo_b2x0.rst  gpsdo_x3x0.rst  identification.rst  images.rst  index.rst  mainpage.dox  specs_rfnoc_uhd.md  sync.rst  transport.rst  usrp1.rst  usrp2.rst  usrp2_card_burner.1  usrp_b100.rst  usrp_b200.rst  usrp_e1x0.rst  usrp_e3x0.dox  usrp_n2xx_simple_net_burner.1  usrp_x3x0.rst  usrp_x3x0_config.rst  usrp_x3xx_fpga_burner.1
host/examples/: CMakeLists.txt  benchmark_rate.cpp  fpgpio.cpp  latency_test.cpp  rfnoc_app.cpp  rfnoc_loopback.cpp  rfnoc_nullsource_ce_rx.cpp  rfnoc_rx_app.cpp  rx_samples_to_file.cpp  rx_timed_samples.cpp  test_messages.cpp  transport_hammer.cpp  tx_samples_from_file.cpp  tx_timed_samples.cpp  tx_waveforms.cpp
host/include/uhd/: CMakeLists.txt  device.hpp  device3.hpp  stream.hpp  version.hpp
host/include/uhd/transport/: CMakeLists.txt  bounded_buffer.ipp  nirio_zero_copy.hpp  usb_control.hpp  usb_zero_copy.hpp  vrt_if_packet.hpp  zero_copy.hpp
host/include/uhd/types/: CMakeLists.txt  cvita_sid.hpp  serial.hpp  sid.hpp
host/include/uhd/usrp/: CMakeLists.txt  multi_usrp.hpp
host/include/uhd/utils/: CMakeLists.txt
host/lib/: CMakeLists.txt  device3.cpp
host/lib/convert/: CMakeLists.txt  convert_common.hpp  convert_item32_2xinterleaved.cpp  convert_pack_sc12.cpp  convert_unpack_sc12.cpp  convert_with_orc.cpp  convert_with_tables.cpp
host/lib/ic_reg_maps/: .gen_lmk04816_regs.py.swp  CMakeLists.txt  gen_ad9361_regs.py  gen_ads62p48_regs.py  gen_lmk04816_regs.py
host/lib/transport/: CMakeLists.txt  gen_vrt_if_packet.py  libusb1_zero_copy.cpp  loopback_test.cpp  loopback_test.hpp  nirio_zero_copy.cpp  super_recv_packet_handler.hpp  super_send_packet_handler.hpp  tcp_zero_copy.cpp  udp_simple.cpp  usb_zero_copy_wrapper.cpp
host/lib/transport/nirio/: CMakeLists.txt  fpga_utils.cpp  nifpga_interface.cpp  nirio_driver_iface_linux.cpp  nirio_driver_iface_macos.cpp  nirio_driver_iface_win.cpp  nirio_fifo.cpp  nirio_interface.cpp  nirio_resource_manager.cpp  niriok_proxy.cpp  niusrprio_session.cpp  status.cpp
host/lib/types/: CMakeLists.txt  serial.cpp  sid.cpp
host/lib/usrp/: CMakeLists.txt  gps_ctrl.cpp  mboard_eeprom.cpp  multi_usrp.cpp
host/lib/usrp/ad9361_ctrl/: CMakeLists.txt  ad9361_ctrl.cpp  ad9361_ctrl.hpp  ad9361_gain_tables.hpp  ad9361_synth_lut.hpp  ad9361_temp_host_impl.cpp  ad9361_transaction.h
host/lib/usrp/b100/: io_impl.cpp
host/lib/usrp/b200/: CMakeLists.txt  ad9361_filter_taps.hpp  ad9361_gain_tables.hpp  ad9361_synth_lut.hpp  b200_codec_ctrl.cpp  b200_codec_ctrl.hpp  b200_ctrl.cpp  b200_ctrl.hpp  b200_iface.cpp  b200_iface.hpp  b200_impl.cpp  b200_impl.hpp  b200_io_impl.cpp  b200_regs.hpp  b200_uart.cpp  io_impl.cpp
host/lib/usrp/b250/: CMakeLists.txt  b250_adc_ctrl.cpp  b250_adc_ctrl.hpp  b250_clock_ctrl.cpp  b250_clock_ctrl.hpp  b250_ctrl.cpp  b250_ctrl.hpp  b250_dac_ctrl.cpp  b250_dac_ctrl.hpp  b250_dboard_iface.cpp  b250_fw_common.h  b250_fw_ctrl.hpp  b250_fw_uart.cpp  b250_impl.cpp  b250_impl.hpp  b250_io_impl.cpp  b250_matt200_clock.cpp  b250_nirio_test.cpp  b250_regs.hpp  dboard_iface.cpp  io_impl.cpp  x300_fw_common.h  x300_init.sh
host/lib/usrp/common/: CMakeLists.txt  spidev.cpp  (+7 more)
host/lib/usrp/e200/: CMakeLists.txt  e200_ctrl.cpp  e200_ctrl.hpp  e200_fifo_config.cpp  e200_fifo_config.hpp  e200_iface.cpp  e200_impl.cpp  e200_impl.hpp  e200_io_impl.cpp  e200_network.cpp  e200_regs.hpp  e200_sysfs_hooks.cpp
host/lib/utils/: CMakeLists.txt  platform.cpp
host/tests/: CMakeLists.txt  block_id_test.cpp  convert_test.cpp  device3_test.cpp  sid_t_test.cpp  sph_recv_test.cpp  vrt_test.cpp
host/utils/: CMakeLists.txt  b200_fx3_utils.cpp  b2xx_fx3_utils.cpp  cdecode.c  cdecode.h  nirio_programmer.cpp  uhd-usrp.rules  uhd_usrp_probe.cpp  usrp_e3x0_network_mode.cpp  usrp_n2xx_simple_net_burner.cpp  usrp_x3xx_burner_utils.hpp  usrp_x3xx_fpga_burner.cpp  usrp_x3xx_net_burner.cpp  usrprio_server.cpp
host/utils/usrprio/: NiFpga.c  NiFpga.h  niusrprio.h  rpc_connection.cpp  rpc_connection.hpp  rpc_logger.cpp  rpc_logger.hpp  rpc_server.cpp  rpc_server.hpp  usrprio_rpc_handler.cpp  usrprio_rpc_handler.hpp
tools/: impact_jtag_programmer.sh
tools/chdr-dissector/: CMakeLists.txt  packet-chdr.c
tools/uhd_dump/: Makefile  chdr_log.c  uhd_dump.c  uhd_dump.h  usrp3_regs.h  vrlp_log.c
(+137 files in other folders)
